docs: add register endpoint
